--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
     <title>About IU - 가수</title>
   </head>
   <body>
-    <h1><a href="project.html">About Iu</a></h1>
+    <h1><a href="index.html">About Iu</a></h1>
     <img src="아이유.jpg">
     <ol>
       <li><a href="1.html">가수</a></li>
